<resources>
    <string name="app_name">SeniorProject</string>
    <string name="maps_api_key">AIzaSyARbPplxegG4jjcFZIVp1hwH1ZdE2x7TvY</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Events">Events</string>
    <string name="News">News</string>
    <string name="Friends">Friends</string>
    <string name="Settings">Settings</string>
</resources>